--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 					<!-- Data Science Projects -->
 					<div class="col-3 col-12-mobile">
-						<h3>Data Science & Machine Learning</h3>
+						<h3>Data Science and Machine Learning</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being.');"><span
@@ -186,10 +186,6 @@
 								title="This capstone project transformed the Jane Addams Digital Edition through three complementary tools: an interactive network visualization mapping social relationships, a topics-over-time visualization tracking thematic evolution, and an LLM-powered query interface for conversational archive exploration.">
 								<span class="label">&#160;Jane Addams Archive&#160;</span>
 							</a>
-							<!-- <a href="docs/jane-addams-report.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report">
-								<span class="label">View Report</span>
-							</a> -->
 							<a href="docs/jane-addams-poster.pdf" class="icon solid fa-file-image" target="_blank"
 								rel="noopener noreferrer" title="View Poster">
 								<span class="label">View Poster</span>
@@ -269,7 +265,7 @@
 
 					<!-- Design & Visualization -->
 					<div class="col-4 col-12-mobile">
-						<h3>Data Analytics & Visualization</h3>
+						<h3>Data Analytics and Info Visualization</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('Interactive visualization of Jane Addams\' social and professional network (1901-1935). Features color-coded relationship categories, dynamic timeline filtering, and detailed context for each correspondent in her extensive Progressive Era communications.');">
@@ -322,7 +318,7 @@
 
 					<!-- Web Development Projects -->
 					<div class="col-5 col-12-mobile">
-						<h3>Web Development & Applications</h3>
+						<h3>Web Development and Applications</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('Web application for managing college staff and faculty, allowing easy addition, editing, and deletion of entries. Developed specifically for Wesleyan College.');"><span
@@ -372,7 +368,7 @@
 
 					<!-- Ethics Research & Visual Design -->
 					<div class="col-3 col-12-mobile">
-						<h3>Ethics Research & Visual Design</h3>
+						<h3>Ethics Research and Visual Design</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This case study analyzes data privacy concerns in period tracking applications, examining ethical tensions between user privacy rights and corporate data monetization, particularly in the post-Roe landscape where reproductive health data has acquired new legal significance and potential risks.');">
@@ -418,7 +414,7 @@
 
 					<!-- Mathematics & Advanced Analytics -->
 					<div class="col-5 col-12-mobile">
-						<h3>Mathematics & Advanced Analytics</h3>
+						<h3>Mathematics and Advanced Analytics</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This document validates Bayes\' rule for conditional entropy by solving five key questions related to the entropy, conditional entropy, and mutual information between creatures\' size and color, with both manual calculations and code validation.');"><span
