Update second-year gradaute student status to recently graduated

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<div id="logo">
 				<div class="image avatar48"><img src="images/headshot.png" alt="Profile Picture"></div>
 				<h1>Anupama Bhatta</h1>
-				<h5>Graduate Student @</h5>
-				<h5>University of Michigan - Ann Arbor</h5>
+				<h3>Data Professional</h3>
+				<h4>M.S. in Information, University of Michigan '25</h4>
 			</div>
 
 			<!-- Nav -->
@@ -64,22 +64,18 @@
 			<div class="container">
 				<header>
 					<h2 style="color: white;">Hi, I'm <span style="color: #e27689;">Anupama</span>! 👋</h2>
-					<p>I'm a second-year graduate student in the Big Data Analytics pathway at the <a
-							href="https://www.si.umich.edu" target="_blank">University of Michigan School of
-							Information</a>, focusing
-						on statistical analysis, machine learning, information visualization, and natural language
-						processing (NLP). With prior experience managing enterprise data platforms in healthtech, I now
-						share
-						my passion for data science with students as a Graduate Teaching Assistant for <a
-							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a
-							Data
-							Scientist</a> at U-M.</p>
-					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics for
-						2025. I invite you to explore my <a href="#portfolio">portfolio</a> and <a
-							href="docs/resume.pdf" target="_blank">résumé</a> — I'm happy to connect and explore
-						opportunities together!
-					</p>
-					</p>
+					<p>I am a recent graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
+							Michigan School of Information</a> with expertise in statistical analysis, machine learning,
+						information visualization, and natural language processing (NLP). With professional experience
+						implementing data integrations at <a href="https://loyalhealth.com" target="_blank">Loyal
+							Health</a> and serving as a Graduate Teaching Assistant for <a
+							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a Data
+							Scientist</a> and other technical courses at U-M, I combine technical expertise with a
+						passion for transforming complex data into compelling narratives that reveal insights and drive
+						informed decision-making.</p>
+					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics. I
+						invite you to explore my <a href="#portfolio">portfolio</a> and <a href="docs/resume.pdf"
+							target="_blank">résumé</a> — I'm happy to connect and explore opportunities together!</p>
 				</header>
 
 				<div id="navlogo">
