Chnages to Home as per dad's feedback

--- a/index.html
+++ b/index.html
@@ -64,11 +64,24 @@
 			<div class="container">
 				<header>
 					<h2 style="color: white;">Hi, I'm <span style="color: #e27689;">Anupama</span>! 👋</h2>
-					<p>I am a recent graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
+					<!-- <p>I am a recent graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
 							Michigan School of Information</a> with expertise in statistical analysis, machine learning,
 						information visualization, and natural language processing (NLP). With professional experience
 						implementing data integrations at <a href="https://loyalhealth.com" target="_blank">Loyal
 							Health</a> and serving as a Graduate Teaching Assistant for <a
+							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a Data
+							Scientist</a> and other technical courses at U-M, I combine technical expertise with a
+						passion for transforming complex data into compelling narratives that reveal insights and drive
+						informed decision-making.</p>
+					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics. I
+						invite you to explore my <a href="#portfolio">portfolio</a> and <a href="docs/resume.pdf"
+							target="_blank">résumé</a> — I'm happy to connect and explore opportunities together!</p> -->
+					<p>I am a graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
+							Michigan School of Information</a> with expertise in statistical analysis, machine learning,
+						information visualization, and natural language processing (NLP). With 5+ years of professional
+						experience
+						implementing data integrations at <a href="https://loyalhealth.com" target="_blank">Loyal
+							Health</a> and having served as a Graduate Teaching Assistant for <a
 							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a Data
 							Scientist</a> and other technical courses at U-M, I combine technical expertise with a
 						passion for transforming complex data into compelling narratives that reveal insights and drive
