More updates to website content as per dad's feedback

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="image avatar48"><img src="images/headshot.png" alt="Profile Picture"></div>
 				<h1>Anupama Bhatta</h1>
 				<h3>Data Professional</h3>
-				<h4>M.S. in Information, University of Michigan '25</h4>
+				<h4>MS in Information Science, University of Michigan</h4>
 			</div>
 
 			<!-- Nav -->
@@ -64,29 +64,24 @@
 			<div class="container">
 				<header>
 					<h2 style="color: white;">Hi, I'm <span style="color: #e27689;">Anupama</span>! 👋</h2>
-					<!-- <p>I am a recent graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
-							Michigan School of Information</a> with expertise in statistical analysis, machine learning,
-						information visualization, and natural language processing (NLP). With professional experience
-						implementing data integrations at <a href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a> and serving as a Graduate Teaching Assistant for <a
-							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a Data
-							Scientist</a> and other technical courses at U-M, I combine technical expertise with a
+					<p>I hold a Master's degree in Information and Data Science from the <a
+							href="https://www.si.umich.edu" target="_blank">University of
+							Michigan School of Information (UMSI)</a>, where I specialized in statistical analysis,
+						machine
+						learning,
+						information visualization, and natural language processing (NLP). My professional background
+						includes 5+ years of experience in enterprise data management at <a
+							href="https://loyalhealth.com" target="_blank">Loyal
+							Health</a>, coupled with a Graduate Teaching Assistantship for <a
+							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Introduction to Applied
+							Data
+							Science</a> in addition to other technical courses at UMSI. Throughout these roles, I have
+						combined
+						technical expertise with a
 						passion for transforming complex data into compelling narratives that reveal insights and drive
 						informed decision-making.</p>
-					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics. I
-						invite you to explore my <a href="#portfolio">portfolio</a> and <a href="docs/resume.pdf"
-							target="_blank">résumé</a> — I'm happy to connect and explore opportunities together!</p> -->
-					<p>I am a graduate from the <a href="https://www.si.umich.edu" target="_blank">University of
-							Michigan School of Information</a> with expertise in statistical analysis, machine learning,
-						information visualization, and natural language processing (NLP). With 5+ years of professional
-						experience
-						implementing data integrations at <a href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a> and having served as a Graduate Teaching Assistant for <a
-							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Becoming a Data
-							Scientist</a> and other technical courses at U-M, I combine technical expertise with a
-						passion for transforming complex data into compelling narratives that reveal insights and drive
-						informed decision-making.</p>
-					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics. I
+					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics
+						roles. I
 						invite you to explore my <a href="#portfolio">portfolio</a> and <a href="docs/resume.pdf"
 							target="_blank">résumé</a> — I'm happy to connect and explore opportunities together!</p>
 				</header>
@@ -120,7 +115,7 @@
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
 									target="_blank">
 									Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
-								Fun fact: In Nepal, large-scale data collection is still emerging—we don’t have vast
+								In Nepal, large-scale data collection is still emerging—we don’t have vast
 								historical datasets, so
 								much of our understanding comes from oral histories and lived experiences. This
 								perspective
@@ -136,11 +131,11 @@
 								After graduating, I joined <a href="https://loyalhealth.com" target="_blank">Loyal</a>,
 								a healthcare technology company,
 								where I took on increasing responsibilities in enterprise data operations, eventually
-								leading a team and overseeing large-scale API integrations across major healthcare
-								systems.</p>
+								being promoted to lead a team overseeing large-scale API integrations across major
+								healthcare systems.</p>
 						</div>
 
-						<div class="identity">
+						<!-- <div class="identity">
 							<h3 style="color: #e27689;"><i class="fas fa-university"></i> Today</h3>
 							<p>At <a href="https://www.si.umich.edu" target="_blank">UMSI</a>, I focus on machine
 								learning, natural language processing, and network
@@ -148,6 +143,19 @@
 								applying statistical modeling, classification techniques, and graph-based methods to
 								uncover insights in complex datasets.
 								<a href="#portfolio">My work</a> includes predictive modeling, text analysis, and
+								interactive visualizations,
+								using tools like <i>scikit-learn</i>, <i>NLTK</i>,
+								<i>PyTorch</i>, <i>NetworkX</i>, and <i>Tableau</i> to
+								build scalable, data-driven solutions.
+							</p>
+						</div> -->
+						<div class="identity">
+							<h3 style="color: #e27689;"><i class="fas fa-laptop-code"></i>Expertise</h3>
+							<p>My work focuses on machine learning, natural language processing, and network
+								analysis, applying statistical modeling, classification techniques, and graph-based
+								methods to
+								uncover insights in complex datasets.
+								<a href="#portfolio">My projects</a> showcase predictive modeling, text analysis, and
 								interactive visualizations,
 								using tools like <i>scikit-learn</i>, <i>NLTK</i>,
 								<i>PyTorch</i>, <i>NetworkX</i>, and <i>Tableau</i> to
