Fix grammar in About text

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						information visualization, and natural language processing (NLP). My professional background
 						includes 5+ years of experience in enterprise data management at <a
 							href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a>, coupled with a Graduate Teaching Assistantship for <a
+							Health</a>, coupled with Graduate Teaching Assistantships for <a
 							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Introduction to Applied
 							Data
 							Science</a> in addition to other technical courses at UMSI. Throughout these roles, I have
@@ -135,20 +135,6 @@
 								healthcare systems.</p>
 						</div>
 
-						<!-- <div class="identity">
-							<h3 style="color: #e27689;"><i class="fas fa-university"></i> Today</h3>
-							<p>At <a href="https://www.si.umich.edu" target="_blank">UMSI</a>, I focus on machine
-								learning, natural language processing, and network
-								analysis,
-								applying statistical modeling, classification techniques, and graph-based methods to
-								uncover insights in complex datasets.
-								<a href="#portfolio">My work</a> includes predictive modeling, text analysis, and
-								interactive visualizations,
-								using tools like <i>scikit-learn</i>, <i>NLTK</i>,
-								<i>PyTorch</i>, <i>NetworkX</i>, and <i>Tableau</i> to
-								build scalable, data-driven solutions.
-							</p>
-						</div> -->
 						<div class="identity">
 							<h3 style="color: #e27689;"><i class="fas fa-laptop-code"></i>Expertise</h3>
 							<p>My work focuses on machine learning, natural language processing, and network
