Final changes to website About section

--- a/index.html
+++ b/index.html
@@ -67,23 +67,22 @@
 					<p>I hold a Master's degree in Information and Data Science from the <a
 							href="https://www.si.umich.edu" target="_blank">University of
 							Michigan School of Information (UMSI)</a>, where I specialized in statistical analysis,
-						machine
-						learning,
-						information visualization, and natural language processing (NLP). My professional background
-						includes 5+ years of experience in enterprise data management at <a
-							href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a>, coupled with Graduate Teaching Assistantships for <a
-							href="https://www.si.umich.edu/programs/courses/568" target="_blank">Introduction to Applied
-							Data
-							Science</a> in addition to other technical courses at UMSI. Throughout these roles, I have
-						combined
-						technical expertise with a
-						passion for transforming complex data into compelling narratives that reveal insights and drive
-						informed decision-making.</p>
+						information visualization, machine learning, data mining, and
+						natural language processing (NLP). My professional background includes 5+ years of experience
+						in enterprise data management at <a href="https://loyalhealth.com" target="_blank">Loyal
+							Health</a>,
+						coupled with Graduate Teaching Assistantships
+						for <a href="https://www.si.umich.edu/programs/courses/568" target="_blank">Introduction to
+							Applied
+							Data Science</a> and other advanced courses at UMSI. Throughout these roles, I
+						have
+						combined analytical expertise with a passion for transforming complex data into compelling
+						narratives that
+						reveal insights and drive informed decision-making.</p>
 					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics
-						roles. I
-						invite you to explore my <a href="#portfolio">portfolio</a> and <a href="docs/resume.pdf"
-							target="_blank">résumé</a> — I'm happy to connect and explore opportunities together!</p>
+						roles. I invite you to explore my <a href="#portfolio">portfolio</a> and <a
+							href="docs/resume.pdf" target="_blank">résumé</a> — I'm happy to connect and explore
+						opportunities together!</p>
 				</header>
 
 				<div id="navlogo">
