--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="image avatar48"><img src="images/headshot.png" alt="Profile Picture"></div>
 				<h1>Anupama Bhatta</h1>
 				<h3>Data Professional</h3>
-				<h4>MS in Information Science, University of Michigan</h4>
+				<h4>MS in Information, University of Michigan</h4>
 			</div>
 
 			<!-- Nav -->
