Update website home page with new employment

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 			<div id="logo">
 				<div class="image avatar48"><img src="images/headshot.png" alt="Profile Picture"></div>
 				<h1>Anupama Bhatta</h1>
-				<h3>Data Professional</h3>
-				<h4>MS in Information, University of Michigan</h4>
+				<h3>Senior Data Analyst @ <a href="https://loyalhealth.com" target="_blank"
+						style="color: #e27689;">Loyal</a></h3>
+				<h4>📍 Ann Arbor, Michigan</h4>
 			</div>
 
 			<!-- Nav -->
@@ -63,26 +64,30 @@
 		<section id="home" class="one dark">
 			<div class="container">
 				<header>
-					<h2 style="color: white;">Hi, I'm <span style="color: #e27689;">Anupama</span>! 👋</h2>
-					<p>I hold a Master's degree in Information and Data Science from the <a
-							href="https://www.si.umich.edu" target="_blank">University of
-							Michigan School of Information (UMSI)</a>, where I specialized in statistical analysis,
-						information visualization, machine learning, data mining, and
-						natural language processing (NLP). My professional background includes 5+ years of experience
-						in enterprise data management at <a href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a>,
-						coupled with Graduate Teaching Assistantships
-						for <a href="https://www.si.umich.edu/programs/courses/568" target="_blank">Introduction to
-							Applied
-							Data Science</a> and other advanced courses at UMSI. Throughout these roles, I
-						have
-						combined analytical expertise with a passion for transforming complex data into compelling
-						narratives that
-						reveal insights and drive informed decision-making.</p>
-					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics
-						roles. I invite you to explore my <a href="#portfolio">portfolio</a> and <a
-							href="docs/resume.pdf" target="_blank">résumé</a> — I'm happy to connect and explore
-						opportunities together!</p>
+					<h2 style="color: white;">Hi, I am <span style="color: #e27689;">Anupama</span>! 👋</h2>
+					<p>I am a data professional with a Master of Science in Information &
+						Data Science from the <a href="https://www.si.umich.edu" target="_blank">University of
+							Michigan School of Information</a>. I love working with <em>Python</em>, <em>R</em>,
+						<em>SQL</em>, and machine learning
+						frameworks to uncover insights from complex datasets and build impactful data solutions. My
+						professional journey includes 5+ years
+						of combined experience in enterprise healthcare data management and multiple Graduate Teaching
+						Assistantship appointments, where my impact on student learning earned me a nomination for <a
+							href="https://www.si.umich.edu/about-umsi/news/2024-25-umsi-outstanding-graduate-student-instructors-announced"
+							target="_blank">Outstanding GSI 2024-25</a>.
+					</p>
+					<p>Currently, I am contracted to <a href="https://loyalhealth.com" target="_blank">Loyal
+							Health</a> as a Senior Data Analyst, focusing on streamlining reporting processes,
+						building <em>Power BI</em> dashboards for major healthcare clients, and creating comprehensive
+						documentation systems that optimize data workflows. I am energized by the challenge of
+						transforming data into clear, impactful stories, particularly when working with purpose-driven
+						teams committed to improving people's experiences and outcomes.
+					</p>
+					<p>I am actively seeking full-time opportunities in data science, machine learning,
+						and analytics roles. I invite you to explore my <a href="#portfolio">portfolio</a> and
+						<a href="docs/resume.pdf" target="_blank">résumé</a> — I would love to connect and explore
+						opportunities together!
+					</p>
 				</header>
 
 				<div id="navlogo">
@@ -114,7 +119,7 @@
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
 									target="_blank">
 									Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
-								In Nepal, large-scale data collection is still emerging—we don’t have vast
+								In Nepal, large-scale data collection is still emerging — we don’t have vast
 								historical datasets, so
 								much of our understanding comes from oral histories and lived experiences. This
 								perspective
