More stylistic changes to the website; passed color accessibility check

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<div class="image avatar48"><img src="images/headshot.png" alt="Profile Picture"></div>
+				<div class="image avatar48"><img src="images/headshot.png"
+						alt="Anupama Bhatta professional headshot photo"></div>
 				<h1>Anupama Bhatta</h1>
 				<h3>Senior Data Analyst @ <a href="https://loyalhealth.com" target="_blank"
-						style="color: #e27689;">Loyal</a></h3>
+						title="Loyal Health company website">Loyal</a></h3>
 				<h4>📍 Ann Arbor, Michigan</h4>
 			</div>
 
@@ -34,7 +35,7 @@
 				</ul>
 			</nav>
 			<a href="docs/resume.pdf" id="resume-link" class="button icon solid fa-file-pdf" target="_blank"
-				rel="noopener noreferrer" title="View Résumé"
+				rel="noopener noreferrer" title="View my résumé"
 				style="text-align: center; display: block;">&#160;&#160;Résumé</a>
 
 		</div>
@@ -66,26 +67,32 @@
 				<header>
 					<h2 style="color: white;">Hi, I am <span style="color: #e27689;">Anupama</span>! 👋</h2>
 					<p>I am a data professional with a Master of Science in Information &
-						Data Science from the <a href="https://www.si.umich.edu" target="_blank">University of
-							Michigan School of Information</a>. I love working with <em>Python</em>, <em>R</em>,
+						Data Science from the <a href="https://www.si.umich.edu" target="_blank"
+							title="University of Michigan School of Information">University of Michigan School of
+							Information</a>
+						. I love working with <em>Python</em>, <em>R</em>,
 						<em>SQL</em>, and machine learning
 						frameworks to uncover insights from complex datasets and build impactful data solutions. My
 						professional journey includes 5+ years
 						of combined experience in enterprise healthcare data management and multiple Graduate Teaching
 						Assistantship appointments, where my impact on student learning earned me a nomination for <a
 							href="https://www.si.umich.edu/about-umsi/news/2024-25-umsi-outstanding-graduate-student-instructors-announced"
-							target="_blank">Outstanding GSI 2024-25</a>.
+							target="_blank" title="UMSI Outstanding Graduate Student Instructors 2024-25 announcement">
+							Outstanding GSI 2024-25</a>.
 					</p>
-					<p>Currently, I am contracted to <a href="https://loyalhealth.com" target="_blank">Loyal
-							Health</a> as a Senior Data Analyst, focusing on streamlining reporting processes,
+					<p>Currently, I am contracted to <a href="https://loyalhealth.com" target="_blank"
+							title="Loyal Health company website">Loyal Health</a>
+						as a Senior Data Analyst, focusing on streamlining reporting processes,
 						building <em>Power BI</em> dashboards for major healthcare clients, and creating comprehensive
 						documentation systems that optimize data workflows. I am energized by the challenge of
 						transforming data into clear, impactful stories, particularly when working with purpose-driven
 						teams committed to improving people's experiences and outcomes.
 					</p>
 					<p>I am actively seeking full-time opportunities in data science, machine learning,
-						and analytics roles. I invite you to explore my <a href="#portfolio">portfolio</a> and
-						<a href="docs/resume.pdf" target="_blank">résumé</a> — I would love to connect and explore
+						and analytics roles. I invite you to explore my <a href="#portfolio"
+							title="View my portfolio">portfolio</a> and
+						<a href="docs/resume.pdf" target="_blank" title="View my résumé">résumé</a> — I would love to
+						connect and explore
 						opportunities together!
 					</p>
 				</header>
@@ -117,8 +124,8 @@
 						<div class="origin-story">
 							<h3 style="color: #e27689;"><i class="fas fa-tree"></i> Roots</h3>
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
-									target="_blank">
-									Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
+									target="_blank" title="Kathmandu, Nepal Wikipedia page">Kathmandu, Nepal 🇳🇵</a>
+								Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
 								In Nepal, large-scale data collection is still emerging — we don’t have vast
 								historical datasets, so
 								much of our understanding comes from oral histories and lived experiences. This
@@ -131,8 +138,11 @@
 							<h3 style="color: #e27689;"><i class="fas fa-graduation-cap"></i> Journey</h3>
 							<p>I moved to the U.S. in 2016 for college and earned my degree in Applied Data Analytics
 								and Economics
-								from <a href="https://www.wesleyancollege.edu" target="_blank">Wesleyan College</a>.
-								After graduating, I joined <a href="https://loyalhealth.com" target="_blank">Loyal</a>,
+								from <a href="https://www.wesleyancollege.edu" target="_blank"
+									title="Wesleyan College website">Wesleyan College</a>
+								Wesleyan College</a>.
+								After graduating, I joined <a href="https://loyalhealth.com" target="_blank"
+									title="Loyal Health company website">Loyal</a>,
 								a healthcare technology company,
 								where I took on increasing responsibilities in enterprise data operations, eventually
 								being promoted to lead a team overseeing large-scale API integrations across major
@@ -145,7 +155,8 @@
 								analysis, applying statistical modeling, classification techniques, and graph-based
 								methods to
 								uncover insights in complex datasets.
-								<a href="#portfolio">My projects</a> showcase predictive modeling, text analysis, and
+								<a href="#portfolio" title="View my portfolio">My projects</a> showcase
+								predictive modeling, text analysis, and
 								interactive visualizations,
 								using tools like <i>scikit-learn</i>, <i>NLTK</i>,
 								<i>PyTorch</i>, <i>NetworkX</i>, and <i>Tableau</i> to
