Minor fix in hyperlinks

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 						<div class="origin-story">
 							<h3 style="color: #e27689;"><i class="fas fa-tree"></i> Roots</h3>
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
-									target="_blank" title="Kathmandu, Nepal Wikipedia page">Kathmandu, Nepal 🇳🇵</a>
-								Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
+									target="_blank" title="Kathmandu, Nepal Wikipedia page">Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
 								In Nepal, large-scale data collection is still emerging — we don’t have vast
 								historical datasets, so
 								much of our understanding comes from oral histories and lived experiences. This
@@ -139,8 +138,7 @@
 							<p>I moved to the U.S. in 2016 for college and earned my degree in Applied Data Analytics
 								and Economics
 								from <a href="https://www.wesleyancollege.edu" target="_blank"
-									title="Wesleyan College website">Wesleyan College</a>
-								Wesleyan College</a>.
+									title="Wesleyan College website">Wesleyan College</a>.
 								After graduating, I joined <a href="https://loyalhealth.com" target="_blank"
 									title="Loyal Health company website">Loyal</a>,
 								a healthcare technology company,
