--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						alt="Anupama Bhatta professional headshot photo"></div>
 				<h1>Anupama Bhatta</h1>
 				<h3>Senior Data Analyst @ <a href="https://loyalhealth.com" target="_blank"
-						title="Loyal Health company website">Loyal</a></h3>
+						title="Loyal company website">Loyal</a></h3>
 				<h4>📍 Ann Arbor, Michigan</h4>
 			</div>
 
@@ -69,8 +69,7 @@
 					<p>I am a data professional with a Master of Science in Information &
 						Data Science from the <a href="https://www.si.umich.edu" target="_blank"
 							title="University of Michigan School of Information">University of Michigan School of
-							Information</a>
-						. I love working with <em>Python</em>, <em>R</em>,
+							Information</a>. I enjoy working with <em>Python</em>, <em>R</em>,
 						<em>SQL</em>, and machine learning
 						frameworks to uncover insights from complex datasets and build impactful data solutions. My
 						professional journey includes 5+ years
@@ -81,7 +80,7 @@
 							Outstanding GSI 2024-25</a>.
 					</p>
 					<p>Currently, I am contracted to <a href="https://loyalhealth.com" target="_blank"
-							title="Loyal Health company website">Loyal Health</a>
+							title="Loyal company website">Loyal</a>
 						as a Senior Data Analyst, focusing on streamlining reporting processes,
 						building <em>Power BI</em> dashboards for major healthcare clients, and creating comprehensive
 						documentation systems that optimize data workflows. I am energized by the challenge of
@@ -124,41 +123,47 @@
 						<div class="origin-story">
 							<h3 style="color: #e27689;"><i class="fas fa-tree"></i> Roots</h3>
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
-									target="_blank" title="Kathmandu, Nepal Wikipedia page">Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
-								In Nepal, large-scale data collection is still emerging — we don’t have vast
-								historical datasets, so
-								much of our understanding comes from oral histories and lived experiences. This
+									target="_blank" title="Kathmandu, Nepal Wikipedia page">Kathmandu, Nepal 🇳🇵</a>,
+								where I learned the value of community and resilience.
+								In Nepal, large-scale data collection is still emerging as a field. Without vast
+								historical datasets, much of our understanding comes from oral histories and
+								lived
+								experiences from diverse local communities. This
 								perspective
-								has shaped how I approach data science: not just as numbers, but as narratives waiting
-								to be uncovered.</p>
+								has shaped how I approach data science — not just as numbers, but as narratives waiting
+								to be uncovered.
+							</p>
 						</div>
 
 						<div class="journey">
 							<h3 style="color: #e27689;"><i class="fas fa-graduation-cap"></i> Journey</h3>
-							<p>I moved to the U.S. in 2016 for college and earned my degree in Applied Data Analytics
-								and Economics
-								from <a href="https://www.wesleyancollege.edu" target="_blank"
-									title="Wesleyan College website">Wesleyan College</a>.
-								After graduating, I joined <a href="https://loyalhealth.com" target="_blank"
-									title="Loyal Health company website">Loyal</a>,
-								a healthcare technology company,
-								where I took on increasing responsibilities in enterprise data operations, eventually
-								being promoted to lead a team overseeing large-scale API integrations across major
-								healthcare systems.</p>
+							<p>I earned my undergraduate degree in Applied Data Analytics and Economics from
+								<a href="https://www.wesleyancollege.edu" target="_blank"
+									title="Wesleyan College website">Wesleyan College</a>,
+								then joined <a href="https://loyalhealth.com" target="_blank"
+									title="Loyal company website">Loyal</a>, a healthcare technology company,
+								advancing through enterprise data
+								operations roles.
+								I completed my graduate degree in Information & Data Science from the
+								<a href="https://www.si.umich.edu" target="_blank"
+									title="University of Michigan School of Information">University of Michigan</a> and
+								am now back at <a href="https://loyalhealth.com" target="_blank"
+									title="Loyal company website">Loyal</a> as a Senior Data Analyst,
+								focusing on
+								streamlined reporting
+								and interactive dashboards for healthcare clients.
+							</p>
 						</div>
 
 						<div class="identity">
 							<h3 style="color: #e27689;"><i class="fas fa-laptop-code"></i>Expertise</h3>
-							<p>My work focuses on machine learning, natural language processing, and network
-								analysis, applying statistical modeling, classification techniques, and graph-based
-								methods to
-								uncover insights in complex datasets.
-								<a href="#portfolio" title="View my portfolio">My projects</a> showcase
-								predictive modeling, text analysis, and
-								interactive visualizations,
-								using tools like <i>scikit-learn</i>, <i>NLTK</i>,
-								<i>PyTorch</i>, <i>NetworkX</i>, and <i>Tableau</i> to
-								build scalable, data-driven solutions.
+							<p>My work spans machine learning, natural language processing, network analysis, and
+								business analytics, applying statistical modeling and data visualization to uncover
+								insights and drive operational improvements. <a href="#portfolio"
+									title="View my portfolio">My projects</a> showcase predictive modeling, text
+								analysis, interactive visualizations, and enterprise reporting, using tools like
+								<i>scikit-learn</i>, <i>NLTK</i>, <i>PyTorch</i>, <i>NetworkX</i>, <i>Tableau</i>, and
+								<i>Power BI</i> to build scalable, data-driven solutions.
 							</p>
 						</div>
 
