Correcting Loyal to Loyal Health

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						alt="Anupama Bhatta professional headshot photo"></div>
 				<h1>Anupama Bhatta</h1>
 				<h3>Senior Data Analyst @ <a href="https://loyalhealth.com" target="_blank"
-						title="Loyal company website">Loyal</a></h3>
+						title="Loyal Health company website">Loyal</a></h3>
 				<h4>📍 Ann Arbor, Michigan</h4>
 			</div>
 
@@ -80,7 +80,7 @@
 							Outstanding GSI 2024-25</a>.
 					</p>
 					<p>Currently, I am contracted to <a href="https://loyalhealth.com" target="_blank"
-							title="Loyal company website">Loyal</a>
+							title="Loyal Health company website">Loyal Health</a>
 						as a Senior Data Analyst, focusing on streamlining reporting processes,
 						building <em>Power BI</em> dashboards for major healthcare clients, and creating comprehensive
 						documentation systems that optimize data workflows. I am energized by the challenge of
@@ -141,14 +141,15 @@
 								<a href="https://www.wesleyancollege.edu" target="_blank"
 									title="Wesleyan College website">Wesleyan College</a>,
 								then joined <a href="https://loyalhealth.com" target="_blank"
-									title="Loyal company website">Loyal</a>, a healthcare technology company,
+									title="Loyal Health company website">Loyal Health</a>, a healthcare technology
+								company,
 								advancing through enterprise data
 								operations roles.
 								I completed my graduate degree in Information & Data Science from the
 								<a href="https://www.si.umich.edu" target="_blank"
-									title="University of Michigan School of Information">University of Michigan</a> and
+									title="University of Michigan School of Information">University of Michigan</a>, and
 								am now back at <a href="https://loyalhealth.com" target="_blank"
-									title="Loyal company website">Loyal</a> as a Senior Data Analyst,
+									title="Loyal Health company website">Loyal</a> as a Senior Data Analyst,
 								focusing on
 								streamlined reporting
 								and interactive dashboards for healthcare clients.
