Minor edit to GSI experience

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						frameworks to uncover insights from complex datasets and build impactful data solutions. My
 						professional journey includes 5+ years
 						of combined experience in enterprise healthcare data management and multiple Graduate Teaching
-						Assistantship appointments, where my impact on student learning earned me a nomination for <a
+						Assistantship appointments, where my dedication to student learning and success earned me a nomination for <a
 							href="https://www.si.umich.edu/about-umsi/news/2024-25-umsi-outstanding-graduate-student-instructors-announced"
 							target="_blank" title="UMSI Outstanding Graduate Student Instructors 2024-25 announcement">
 							Outstanding GSI 2024-25</a>.
